--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8"/>
-        <title>Accueil - Robie Lens Photographie</title>
+        <title>Accueil - Robbie Lens Photographie</title>
     </head>
     <body>
         <p>Ceci est un texte dans le corps du site.</p>
