--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <p>Ceci est un texte dans le corps du site.</p>
+        <a href="a-propos.html">À Propos</a>
         <!-- Ici c'est un commentaire. [CTRL+K] et ensuite [CTRL+C]-->
     </body>
 </html>
