Ajouts des liens vers réseaux sociaux

--- a/a-propos.html
+++ b/a-propos.html
@@ -11,6 +11,9 @@
         <ul>Shooting mode,</ul>
         <ul>Retouches sur mesure,</ul>
         <ul>Développement. </ul>
+        <a href="index.html">Page d'acceuil</a>
+        <a href="twitter.com" target="_blank">Twitter</a>
+        <a href="instagram.com" target="_blank">Instagram</a>
 
     </body>
 </html>
