--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <body>
         <p>Ceci est un texte dans le corps du site.</p>
         <a href="a-propos.html">À Propos</a>
+        <a href="twitter.com" target="_blank">Twitter</a>
+        <a href="instagram.com" target="_blank">Instagram</a>
         <!-- Ici c'est un commentaire. [CTRL+K] et ensuite [CTRL+C]-->
     </body>
 </html>
