Ajout des images

--- a/a-propos.html
+++ b/a-propos.html
@@ -12,8 +12,8 @@
         <ul>Retouches sur mesure,</ul>
         <ul>Développement. </ul>
         <a href="index.html">Page d'acceuil</a>
-        <a href="twitter.com" target="_blank">Twitter</a>
-        <a href="instagram.com" target="_blank">Instagram</a>
+        <a href="twitter.com" target="_blank"><img src="https://e7.pngegg.com/pngimages/708/311/png-clipart-icon-logo-twitter-logo-twitter-logo-blue-social-media-thumbnail.png"></a>
+        <a href="instagram.com" target="_blank"><img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA0L3JtNTMzLXJpcHBlZC1hLTAwMy5wbmc.png"></a>
 
     </body>
 </html>
