--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <p>Ceci est un texte dans le corps du site.</p>
         <img src="https://ih1.redbubble.net/image.2269390950.8818/raf,360x360,075,t,fafafa:ca443f4786.jpg" alt="Esti que c't'un chat très cool avec des lunettes" title="Y'est très cool le chat.">
         <a href="a-propos.html">À Propos</a>
-        <a href="twitter.com" target="_blank"><img src="https://e7.pngegg.com/pngimages/708/311/png-clipart-icon-logo-twitter-logo-twitter-logo-blue-social-media-thumbnail.png"></a>
-        <a href="instagram.com" target="_blank"><img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA0L3JtNTMzLXJpcHBlZC1hLTAwMy5wbmc.png"></a>
+        <a href="https://twitter.com" target="_blank"><img src="https://e7.pngegg.com/pngimages/708/311/png-clipart-icon-logo-twitter-logo-twitter-logo-blue-social-media-thumbnail.png"></a>
+        <a href="https://instagram.com" target="_blank"><img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA0L3JtNTMzLXJpcHBlZC1hLTAwMy5wbmc.png"></a>
         <!-- Ici c'est un commentaire. [CTRL+K] et ensuite [CTRL+C]-->
     </body>
 </html>
