--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8"/>
-        <title>Accueil - Robbie Lens Photographie</title>
+        <link href="style.css" rel="stylesheet"/>
+        <title>Accueil - Les Mondes lointains</title>
     </head>
     <body>
-        <p>Ceci est un texte dans le corps du site.</p>
-        <img src="https://ih1.redbubble.net/image.2269390950.8818/raf,360x360,075,t,fafafa:ca443f4786.jpg" alt="Esti que c't'un chat très cool avec des lunettes" title="Y'est très cool le chat.">
-        <a href="a-propos.html">À Propos</a>
-        <a href="https://twitter.com" target="_blank"><img src="https://e7.pngegg.com/pngimages/708/311/png-clipart-icon-logo-twitter-logo-twitter-logo-blue-social-media-thumbnail.png"></a>
-        <a href="https://instagram.com" target="_blank"><img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA0L3JtNTMzLXJpcHBlZC1hLTAwMy5wbmc.png"></a>
+<h1>Bienvenue sur le site des <span=class><strong>Mondes Lointains</strong></span>!</h1>
+<br>
+<p> Vous trouverez ici toutes les informations concernant les jeux de rôles suivants :</p>
+<ul><a href="pages/kovenwald.html" target="_blank">Kovenwald</a></ul>
+<ul><a href="pages/chroniques.html" target="_blank">Les Nouvelles Chroniques</a></ul>
         <!-- Ici c'est un commentaire. [CTRL+K] et ensuite [CTRL+C]-->
     </body>
 </html>
