--- a/pages/kovenwald.html
+++ b/pages/kovenwald.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8"/>
-        <link href="style.css" rel="stylesheet"/>
+        <link href="css/style.css" rel="stylesheet"/>
         <title>Accueil - Kovenwald </title>
     </head>
     <body>
