--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <p> Vous trouverez ici toutes les informations concernant les jeux de rôles suivants :</p>
 <ul><a href="pages/kovenwald.html" target="_blank">Kovenwald</a></ul>
 <ul><a href="pages/chroniques.html" target="_blank">Les Nouvelles Chroniques</a></ul>
-        <!-- Ici c'est un commentaire. [CTRL+K] et ensuite [CTRL+C]-->
+        <!-- Description du site --><br><br>
+<p>Dans ce site de référencement vous trouverez les informations concernant les mises à jours liées aux règles homebrew, je compte aussi mettre à disposition quelques pensées et conseils qui me passeront par la tête, un peu comme un référentiel des succès et des échecs de mon mastering. Le site servira aussi de wiki, du moins j'essayerai de le tenir à jour pour.</p>
     </body>
 </html>
