--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         <title>Accueil - Les Mondes lointains</title>
     </head>
     <body>
+        <img src="" alt="Logo des mondes distants" id="logo"/>
 <h1>Bienvenue sur le site des <span=class><strong>Mondes Lointains</strong></span>!</h1>
 <br>
 <p> Vous trouverez ici toutes les informations concernant les jeux de rôles suivants :</p>
 <ul><a href="pages/kovenwald.html" target="_blank">Kovenwald</a></ul>
 <ul><a href="pages/chroniques.html" target="_blank">Les Nouvelles Chroniques</a></ul>
         <!-- Description du site --><br><br>
-<p>Dans ce site de référencement vous trouverez les informations concernant les mises à jours liées aux règles homebrew, je compte aussi mettre à disposition quelques pensées et conseils qui me passeront par la tête, un peu comme un référentiel des succès et des échecs de mon mastering. Le site servira aussi de wiki, du moins j'essayerai de le tenir à jour pour.</p>
+<p>Dans ce site de référencement vous trouverez les informations concernant les mises à jours liées aux règles homebrew, je compte aussi mettre à disposition quelques pensées et conseils qui me passeront par la tête, un peu comme un référentiel des succès et des échecs de mon mastering. Le site servira aussi de wiki, du moins j'essayerai de le tenir à jour pour.</p><br>
+<ul><a href="pages/dungeonmaster.html">Carnet de bord - Gamemaster</a></ul>
     </body>
 </html>
