--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <ul><a href="pages/chroniques.html" target="_blank">Les Nouvelles Chroniques</a></ul>
         <!-- Description du site --><br><br>
 <p>Dans ce site de référencement vous trouverez les informations concernant les mises à jours liées aux règles homebrew, je compte aussi mettre à disposition quelques pensées et conseils qui me passeront par la tête, un peu comme un référentiel des succès et des échecs de mon mastering. Le site servira aussi de wiki, du moins j'essayerai de le tenir à jour pour.</p><br>
-<ul><a href="pages/dungeonmaster.html">Carnet de bord - Gamemaster</a></ul>
+<ul><a href="pages/dungeonmaster.html">Carnet de bord d'un Maître du Jeu</a></ul>
     </body>
 </html>
