--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Accueil - Les Mondes lointains</title>
     </head>
     <body>
-        <img src="" alt="Logo des mondes distants" id="logo"/>
+        <header><img src="https://static.vecteezy.com/system/resources/previews/016/916/479/original/placeholder-icon-design-free-vector.jpg" alt="Logo des mondes distants" id="logo"/></header>
 <h1>Bienvenue sur le site des <span=class><strong>Mondes Lointains</strong></span>!</h1>
 <br>
 <p> Vous trouverez ici toutes les informations concernant les jeux de rôles suivants :</p>
