--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
                 </ul>
             </nav>
         </header>
-<h1>Bienvenue sur le site des <span=class><strong>Mondes Lointains</strong></span>!</h1>
+        <main>
+    <section class="First"><h1>Bienvenue sur le site des <span=class><strong>Mondes Lointains</strong></span>!</h1>
 <br>
 <p> Vous trouverez ici toutes les informations concernant les jeux de rôles suivants :</p>
-
+</section>
         <!-- Description du site --><br><br>
-<p>Dans ce site de référencement vous trouverez les informations concernant les mises à jours liées aux règles homebrew, je compte aussi mettre à disposition quelques pensées et conseils qui me passeront par la tête, un peu comme un référentiel des succès et des échecs de mon mastering. Le site servira aussi de wiki, du moins j'essayerai de le tenir à jour pour.</p><br>
+        <section class="Second"> <p>Dans ce site de référencement vous trouverez les informations concernant les mises à jours liées aux règles homebrew, je compte aussi mettre à disposition quelques pensées et conseils qui me passeront par la tête, un peu comme un référentiel des succès et des échecs de mon mastering. Le site servira aussi de wiki, du moins j'essayerai de le tenir à jour pour.</p><br></section>
 <ul><a href="pages/dungeonmaster.html">Carnet de bord d'un Maître du Jeu</a></ul>
+        </main>
+<footer>Ce site internet est mon terrain de jeu Web Dev</footer>
     </body>
 </html>
