--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             Suspendisse tincidunt, ex in molestie scelerisque, turpis urna facilisis elit, at varius mi est et purus. Pellentesque vel sodales libero. Suspendisse in efficitur est. Integer scelerisque sem vitae justo mollis feugiat. Nulla gravida odio vitae lorem mollis consequat. Aliquam placerat sagittis sagittis. In hac habitasse platea dictumst. Etiam feugiat venenatis diam ac consectetur. In sed laoreet urna, non blandit arcu. Pellentesque eu nulla mauris. Mauris vel tortor consequat, pellentesque libero vitae, mattis diam.
             
-            Curabitur purus enim, faucibus et ligula eu, placerat semper eros. Phasellus mi enim, mollis sit amet risus quis, posuere luctus mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam eget consectetur tellus. Pellentesque tempus vitae eros ut tristique. Sed vitae felis ac nisi commodo egestas. Vestibulum ipsum libero, mollis ut lobortis non, cursus a nunc.</p><br></section>
+            Curabitur purus enim, faucibus et ligula eu, placerat semper eros. Phasellus mi enim, mollis sit amet risus quis, posuere luctus mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam eget consectetur tellus. Pellentesque tempus vitae eros ut tristique. Sed vitae felis ac nisi commodo egestas. Vestibulum ipsum libero, mollis ut lobortis non, cursus a nunc.</p></section>
 <ul><a href="pages/dungeonmaster.html">Carnet de bord d'un Maître du Jeu</a></ul>
         </main>
 <footer>Ce site internet est mon terrain de jeu Web Dev</footer>
