--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
         </header>
         <main>
-    <aside>Curabitur sed felis ornare, pellentesque nisl eleifend, iaculis dolor. Nunc semper interdum ex sed suscipit. Donec auctor felis id vestibulum cursus. Suspendisse aliquam maximus tempor. Phasellus vitae turpis ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin ipsum urna, hendrerit nec ex vel, interdum venenatis purus. Sed tempor ante nec odio dictum semper.
+    <aside class="aside">Curabitur sed felis ornare, pellentesque nisl eleifend, iaculis dolor. Nunc semper interdum ex sed suscipit. Donec auctor felis id vestibulum cursus. Suspendisse aliquam maximus tempor. Phasellus vitae turpis ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin ipsum urna, hendrerit nec ex vel, interdum venenatis purus. Sed tempor ante nec odio dictum semper.
     </aside>
             <section class="First"><h1>Bienvenue sur le site des <span=class><strong>Mondes Lointains</strong></span>!</h1>
 <br>
