--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <main>
     <aside class="aside">Curabitur sed felis ornare, pellentesque nisl eleifend, iaculis dolor. Nunc semper interdum ex sed suscipit. Donec auctor felis id vestibulum cursus. Suspendisse aliquam maximus tempor. Phasellus vitae turpis ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin ipsum urna, hendrerit nec ex vel, interdum venenatis purus. Sed tempor ante nec odio dictum semper.
     </aside>
-            <section class="First"><h1>Bienvenue sur le site des <span=class><strong>Mondes Lointains</strong></span>!</h1>
-<br>
+            <section class="First"><h1>Bienvenue sur le site des <strong>Mondes Lointains</strong>!</h1>
 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus fringilla non nunc ut laoreet. Cras dictum eget mi id interdum. Sed interdum condimentum nisl, sed convallis odio gravida quis. Nunc et nisi id enim blandit ornare sed non lacus. Morbi tempus eros sem, sed consectetur diam molestie nec. Nam vitae nulla bibendum, mattis augue sit amet, volutpat erat. Praesent pharetra justo ut tellus condimentum ultricies. Quisque fringilla vitae nisi non pulvinar. Etiam sit amet fermentum velit. Integer posuere et tellus et placerat. Phasellus eu aliquet risus. Donec iaculis elementum velit. Duis at lectus nisi. Sed interdum, lacus porttitor sollicitudin facilisis, nisl mi sagittis libero, quis varius massa velit ac erat. Sed ullamcorper diam nunc, eu eleifend tellus accumsan in.
 
     Curabitur sed felis ornare, pellentesque nisl eleifend, iaculis dolor. Nunc semper interdum ex sed suscipit. Donec auctor felis id vestibulum cursus. Suspendisse aliquam maximus tempor. Phasellus vitae turpis ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin ipsum urna, hendrerit nec ex vel, interdum venenatis purus. Sed tempor ante nec odio dictum semper. </p>
